# opr_ros

opr_description/robots/: gankenkun_v3.xacro
opr_msgs/: CMakeLists.txt
opr_msgs/msg/: SetColor.msg
opr_user_interface/: CMakeLists.txt
opr_user_interface/include/: color_calibration.hpp  statusui.hpp
opr_user_interface/src/: color_calibration.cpp  statusui.cpp
opr_vision/: CMakeLists.txt  package.xml
opr_vision/src/: hpl_types.h  main.cpp  vision.cpp  vision.h
opr_vision/src/detector/: ball_particle.cpp  ball_particle.h  detector_color_table.cpp  detector_color_table.h  detector_fcn.cpp  detector_fcn.h  detector_tool.cpp  detector_tool.h  detector_wl.cpp  detector_wl.h  detector_yolo.cpp  detector_yolo.h  object_detector.cpp  object_detector.h  particle.h  predict_by_deep_learning.cpp  predict_by_deep_learning.h
opr_vision/src/detector/fcn/: chainer_socket.py  model.py
opr_vision/src/detector/whiteline_detection_deep/: chainer_socket.py  chainer_socket_whiteline.sh  model.py
opr_vision/src/image_grabber/: image_grabber.cpp  image_grabber.h  image_grabber_camera.cpp  image_grabber_camera.h  image_grabber_file.cpp  image_grabber_file.h  image_grabber_ros.cpp  image_grabber_ros.h  image_grabber_v4l.cpp  image_grabber_v4l.h  image_grabber_vrep.cpp  image_grabber_vrep.h  image_grabber_webots.cpp  image_grabber_webots.h  image_grabber_webots_direct.cpp  image_grabber_webots_direct.h
opr_vision/src/image_grabber/v4l/: v4l2capture.cpp  v4l2capture.h  video_adjust.h  video_adjust_KBCRM05VU.cpp  video_adjust_KBCRM05VU.h  video_adjust_KBCRS02MU.cpp  video_adjust_KBCRS02MU.h
